--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   </div>
             </div>
             <div class="col-md-9">
-                <table>
+                <table id="table">
                     <tr>
                         <th>FIRSTNAME</th>
                         <th>LASTNAME</th>
@@ -63,9 +63,7 @@
                         <th>STATE</th>
                         <th>COUNTRY</th>
                     </tr>
-                    <tr id="row">
-
-                    </tr>
+                    
                 </table>
             </div>
         </div>
